<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.login.LoginActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/primary_blue_linear_vertical_gradient" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="@dimen/dimen70dp"
        android:layout_height="@dimen/dimen70dp"
        android:layout_marginStart="@dimen/dimen30dp"
        android:layout_marginTop="@dimen/dimen30dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/dimen0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/dimen15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintWidth_percent="0.85">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/dimen20dp"
            android:paddingVertical="@dimen/dimen15dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLoginText"
                style="@style/MyTextStyleRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen5dp"
                android:text="@string/login"
                android:textColor="@color/black_text"
                android:textSize="@dimen/textsize26sp"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/vLoginTextDivider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen1dp"
                android:layout_marginTop="@dimen/dimen20dp"
                android:background="@color/light_purple_divider"
                app:layout_constraintTop_toBottomOf="@id/tvLoginText" />

            <LinearLayout
                android:id="@+id/llUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen25dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/vLoginTextDivider">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvUsernameText"
                    style="@style/MyTextStyleRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="@color/black_text"
                    android:textSize="@dimen/textsize16sp" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen7dp"
                    app:cardCornerRadius="@dimen/dimen10dp"
                    app:cardElevation="@dimen/dimen0dp"
                    app:strokeColor="@color/light_purple_divider"
                    app:strokeWidth="@dimen/dimen1dp">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="false"
                        android:hint=""
                        app:hintEnabled="false"
                        android:background="@color/transparent"
                        android:textColorHint="@color/light_purple_divider"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        >

                    <EditText
                        android:id="@+id/etUsername"
                        style="@style/MyTextStyleRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:hint="@string/enter_your_username"
                        android:inputType="text"
                        android:paddingHorizontal="@dimen/dimen15dp"
                        android:paddingVertical="@dimen/dimen15dp"
                        android:textColor="@color/light_purple_divider"
                        android:textColorHint="@color/light_purple_divider"
                        android:textSize="@dimen/textsize16sp"
                        android:autofillHints="username"
                        />
                    </com.google.android.material.textfield.TextInputLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen15dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/llUsername">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvPasswordText"
                    style="@style/MyTextStyleRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/black_text"
                    android:textSize="@dimen/textsize16sp" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen7dp"
                    app:cardCornerRadius="@dimen/dimen10dp"
                    app:cardElevation="@dimen/dimen0dp"
                    app:strokeColor="@color/light_purple_divider"
                    app:strokeWidth="@dimen/dimen1dp">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleTint="@color/light_purple_divider"
                        app:passwordToggleEnabled="true"
                        android:hint=""
                        app:hintEnabled="false"
                        android:background="@color/transparent"
                        android:textColorHint="@color/light_purple_divider"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        >

                    <EditText
                        android:id="@+id/etPassword"
                        style="@style/MyTextStyleRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:hint="@string/enter_your_password"
                        android:inputType="textPassword"
                        android:paddingHorizontal="@dimen/dimen15dp"
                        android:paddingVertical="@dimen/dimen15dp"
                        android:textColor="@color/light_purple_divider"
                        android:textColorHint="@color/light_purple_divider"
                        android:textSize="@dimen/textsize16sp"
                        android:autofillHints="password" />
                    </com.google.android.material.textfield.TextInputLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvLogin"
                android:layout_width="@dimen/dimen0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen40dp"
                app:cardCornerRadius="@dimen/dimen15dp"
                app:cardElevation="@dimen/dimen0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llPassword">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/MyTextStyleBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/primary_blue_linear_horizontal_gradient"
                    android:gravity="center"
                    android:paddingVertical="@dimen/dimen15dp"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize16sp" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDontHaveAnAccountText"
                style="@style/MyTextStyleRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen30dp"
                android:layout_marginBottom="@dimen/dimen10dp"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black_text"
                android:textSize="@dimen/textsize16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvRegisterText"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvLogin" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvRegisterText"
                style="@style/MyTextStyleBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen5dp"
                android:layout_marginTop="@dimen/dimen30dp"
                android:layout_marginBottom="@dimen/dimen10dp"
                android:text="@string/register"
                android:textColor="@color/light_purple_divider"
                android:textSize="@dimen/textsize16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvDontHaveAnAccountText"
                app:layout_constraintTop_toBottomOf="@id/cvLogin" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>
